--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
     "@tailwindcss/vite": "^4.1.5",
@@ -20,6 +21,8 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "emailjs-com": "^3.2.0",
+    "lottie-react": "^2.4.1",
+    "lottie-web": "^5.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
